--- a/gradle.properties
+++ b/gradle.properties
@@ -1,34 +1,14 @@
-# IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
-
-pluginGroup = com.github.mattco98.serenityosintellijplugin
-pluginName = serenityos-intellij-plugin
-pluginRepositoryUrl = https://github.com/mattco98/serenityos-intellij-plugin
-# SemVer format -> https://semver.org
-pluginVersion = 0.0.1
-
-# Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 223
-pluginUntilBuild = 233.*
-
-# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2022.3.3
-
+pluginGroup=me.mattco.serenityos
+pluginName=SerenityOS-DSL
+pluginVersion=1.0.0
+pluginSinceBuild=222
+pluginUntilBuild=233.*
+platformType=CL
+platformVersion=2023.2.2
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
-
-# Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.4
-
-# Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
-kotlin.stdlib.default.dependency = false
-
-# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
-org.gradle.configuration-cache = true
-
-# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
-org.gradle.caching = true
-
-# Enable Gradle Kotlin DSL Lazy Property Assignment -> https://docs.gradle.org/current/userguide/kotlin_dsl.html#kotdsl:assignment
-systemProp.org.gradle.unsafe.kotlin.assignment = true
+platformPlugins=com.intellij.clion,com.intellij.cidr.lang,com.intellij.cidr.base
+javaVersion=17
+gradleVersion=8.4
+# The platform includes Kotlin, so we don't have to
+kotlin.stdlib.default.dependency=false
