IPC: Allow clicking on include paths

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -103,5 +103,9 @@
                 implementationClass="me.mattco.serenityos.ipc.IPCSyntaxAnnotator"
         />
         <colorSettingsPage implementation="me.mattco.serenityos.ipc.IPCColorSettingsPage" />
+        <projectService
+                serviceInterface="me.mattco.serenityos.ipc.project.IPCProjectService"
+                serviceImplementation="me.mattco.serenityos.ipc.project.IPCProjectServiceImpl"
+        />
     </extensions>
 </idea-plugin>
