Add GML support

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ pluginGroup=me.mattco.serenityos
 pluginName=SerenityOS-DSL
 pluginVersion=1.1.0
 pluginSinceBuild=232
-pluginUntilBuild=233.2
+pluginUntilBuild=233.*
 platformType=CL
 platformVersion=2023.3.2
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
