--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,13 +6,16 @@ annotations = "24.1.0"
 kotlin = "1.9.22"
 changelog = "2.2.0"
 gradleIntelliJPlugin = "1.17.0"
-grammarkit = "2022.3.2"
+grammarkit = "2022.3.2.1"
+kotlinxSerialization = "1.6.2"
 
 [libraries]
 annotations = { group = "org.jetbrains", name = "annotations", version.ref = "annotations" }
+kotlinSerialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
 gradleIntelliJPlugin = { id = "org.jetbrains.intellij", version.ref = "gradleIntelliJPlugin" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 grammarkit = { id = "org.jetbrains.grammarkit", version.ref = "grammarkit" }
